--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WhatIveLearned">
         <activity
+            android:name=".Unit6"
+            android:exported="false" />
+        <activity
+            android:name=".Unit5"
+            android:exported="false" />
+        <activity
+            android:name=".Unit4"
+            android:exported="false" />
+        <activity
+            android:name=".Unit3"
+            android:exported="false" />
+        <activity
+            android:name=".Unit2"
+            android:exported="false" />
+        <activity
             android:name=".Unit1"
             android:exported="false" />
         <activity
